--- a/home.Page.html
+++ b/home.Page.html
@@ -31,17 +31,17 @@
     <div id="myModal" class="modal">
         <div class="modal-content">
           <span class="close" onclick="closeModal()">&times;</span>
-          <h2>Login</h2>
+          <h2 style="color: rgb(255, 113, 4); font-size: 30px;">Login</h2>
           
-          <label for="username">Email:</label>
+          <label for="username"><p style="color: aliceblue; margin: 0px;">Email:</p></label>
           <input type="text" id="username" name="username">
           <br>
-          <label for="password">Senha:</label>
+          <label for="password"><p style="color: aliceblue; margin: 0px;">Senha:</p></label>
           <input type="password" id="password" name="password">
           <br>
           <button onclick="submitLogin()">Logar</button>
         </div>
-    </div>
+    </div>
 
     <div class="mae">
         <div class="carousel-container">
