mouse hover edit button

--- a/index.html
+++ b/index.html
@@ -114,6 +114,13 @@
                 padding-left: 173px;
                 margin: 0px;
             }
+            .editVenda {
+                visibility: hidden;
+            }
+            tr:hover .editVenda {
+                visibility: visible;
+            }
+
         </style>
     </head>
     <body>
@@ -483,7 +490,7 @@
                     backOpacity.style.display = 'none';
                 }
             });
-
+        
         </script>
     </body>
     </html>
