color and boxes fixed

--- a/relatorio.html
+++ b/relatorio.html
@@ -20,6 +20,39 @@
                 justify-content: space-between;
                 margin-bottom: 4px;
             }
+            .btn {
+                background-color: #F15001;
+                border-color: #F15001;
+            }
+            .btn:hover {
+                background-color: #f16620;
+                border-color: #F15001;
+            }
+            .btn:focus {
+                -moz-box-shadow: none !important;
+                -webkit-box-shadow: none !important;
+                box-shadow: none !important;
+            }
+            .table tbody tr:hover {
+                background-color: #313030; /* Cor de fundo quando passar o mouse */
+                color: #ffffff; /* Cor do texto quando passar o mouse */
+            }
+            /* custom scrollbar */
+            ::-webkit-scrollbar {
+            width: 18px;
+            }
+            ::-webkit-scrollbar-track {
+            background-color: transparent;
+            }
+            ::-webkit-scrollbar-thumb {
+            background-color: #889498;
+            border-radius: 20px;
+            border: 6px solid transparent;
+            background-clip: content-box;
+            }
+            ::-webkit-scrollbar-thumb:hover {
+            background-color: #9da4a5;
+            }
         </style>
     </head>
 
