--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
                 color: #ffffff;
             }
             .btn {
-                background-color: cadetblue;
-                border-color: cadetblue;
+                background-color: #F15001;
+                border-color: #F15001;
             }
             .btn:hover {
-                background-color: rgb(54, 85, 86);
-                border-color: cadetblue;
+                background-color: #f16620;
+                border-color: #F15001;
             }
             .btn:focus {
                 -moz-box-shadow: none !important;
@@ -121,33 +121,61 @@
             tr:hover .editVenda {
                 visibility: visible;
             }
+            .table tbody tr:hover {
+                background-color: #2a2929; /* Cor de fundo quando passar o mouse */
+                color: #ffffff; /* Cor do texto quando passar o mouse */
+            }
+            .containerBig {
+                padding: 25px;
+                background-color: rgb(37, 37, 35);
+                box-shadow: 0 4px 28px rgba(123,151,158,.25);
+                border: 1px solid rgb(59, 59, 57);
+            }
+            /* custom scrollbar */
+            ::-webkit-scrollbar {
+            width: 18px;
+            }
+            ::-webkit-scrollbar-track {
+            background-color: transparent;
+            }
+            ::-webkit-scrollbar-thumb {
+            background-color: #889498;
+            border-radius: 20px;
+            border: 6px solid transparent;
+            background-clip: content-box;
+            }
+            ::-webkit-scrollbar-thumb:hover {
+            background-color: #9da4a5;
+            }
 
         </style>
     </head>
     <body>
-        <div class="container m-auto" style="padding-top: 25px;">
-            <div class="headerList">
-                <h3>Vendas</h3>
-                <span>
-                    <button id="btnAdd" type="button" class="btn btn-primary">+ Adicionar</button>
-                    <a href="C:\Users\nilva.costa\Documents\GitHub\website-project\relatorio.html" target="_blank"><button id="btnGerar" type="button" class="btn btn-primary">Gerar relatório</button></a>
-                </span>
+        <div class="containerBig">
+            <div class="container m-auto">
+                <div class="headerList">
+                    <h3>Vendas</h3>
+                    <span>
+                        <button id="btnAdd" type="button" class="btn btn-primary">+ Adicionar</button>
+                        <a href="C:\Users\nilva.costa\Documents\GitHub\website-project\relatorio.html" target="_blank"><button id="btnGerar" type="button" class="btn btn-primary">Gerar relatório</button></a>
+                    </span>
+                </div>
+    
+                <table class="table table-hover" id="aTable">
+                    <thead>
+                        <tr class="text-center">
+                            <th class="col-2 text-center">Cód. do Vendedor</th>
+                            <th class="col-2 text-center">Nome</th>
+                            <th class="col-2">Cargo</th>
+                            <th class="col-3">Cód. da Venda</th>
+                            <th class="col-3 text-center">Valor da Venda</th>
+                            <th></th>
+                        </tr>
+    
+                    </thead>
+                    <tbody class="corpo"></tbody>
+                </table>
             </div>
-
-            <table class="table table-hover" id="aTable">
-                <thead>
-                    <tr class="text-center">
-                        <th class="col-2 text-center">Cód. do Vendedor</th>
-                        <th class="col-2 text-center">Nome</th>
-                        <th class="col-2">Cargo</th>
-                        <th class="col-3">Cód. da Venda</th>
-                        <th class="col-3 text-center">Valor da Venda</th>
-                        <th></th>
-                    </tr>
-
-                </thead>
-                <tbody class="corpo"></tbody>
-            </table>
         </div>
 
         <div class="modalBackdrop hidden" style="display: none;"></div>
