--- a/relatorio.html
+++ b/relatorio.html
@@ -10,6 +10,8 @@
             body {
                 background-color: #3f3d3d;
                 color: #ffffff;
+                margin: 0;
+                padding: 0;
             }
             .table {
                 color: #ffffff;
@@ -53,10 +55,34 @@
             ::-webkit-scrollbar-thumb:hover {
             background-color: #9da4a5;
             }
+            header {
+                background-color: #1b1b1b;
+                height: 120px;
+                margin-bottom: 20px;
+            }
+            h1 {
+                color: whitesmoke;
+                font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+                font-size: 3em;
+                font-weight: bold;
+                padding-top: 25px;
+                padding-left: 30px;
+            }
+            mark {
+                color:#F15001 ;
+                font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+                background-color: inherit;
+            }
         </style>
     </head>
 
     <body>
+        <header>
+            <div id="header">
+                <h1>Consórcios <mark>LTDA</mark></h1>
+            </div>
+        </header>
+
         <div class="container m-auto" style="padding-top: 25px;">
             <div class="headerList">
                 <h4>Relatório de Vendas</h4>
