css and naming id/class updates

--- a/index.html
+++ b/index.html
@@ -23,8 +23,6 @@
             }
             body {
                 background-color: #3f3d3d;
-                color: #ffffff;
-                font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             }
             .table {
                 color: #ffffff;
@@ -154,7 +152,7 @@
         <div class="containerBig">
             <div class="container m-auto">
                 <div class="headerList">
-                    <h3>Vendas</h3>
+                    <h3 style="color: #ffffff;">Vendas</h3>
                     <span>
                         <button id="btnAdd" type="button" class="btn btn-primary">+ Adicionar</button>
                         <a href="C:\Users\nilva.costa\Documents\GitHub\website-project\relatorio.html" target="_blank"><button id="btnGerar" type="button" class="btn btn-primary">Gerar relatório</button></a>
