--- a/relatorio.html
+++ b/relatorio.html
@@ -104,6 +104,9 @@
             footer {
                 flex-shrink: 0;
             }
+            #header {
+                display: flex;
+            }
 
         </style>
     </head>
@@ -111,7 +114,8 @@
     <body>
         <header>
             <div id="header">
-                <a href="C:\Users\nilva.costa\Documents\GitHub\website-project\index.html" target="_blank"><h1>Consórcios <mark>LTDA</mark></h1></a>
+                <a style="margin: 22px 8px;" href="C:\Users\nilva.costa\Documents\GitHub\website-project\index.html" target="_blank"><img src="./img/logo_consorcio.png" alt="Logo da empresa" width="60" height="50"></a>
+                <a href="C:\Users\nilva.costa\Documents\GitHub\website-project\index.html" target="_blank"><h1 style="padding-left: 0px;">Consórcios <mark>LTDA</mark></h1></a>
             </div>
         </header>
 
