--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
                         do carro dos sonhos, a reforma da casa ou a viagem tão esperada, temos planos que se encaixam
                         perfeitamente no seu orçamento.</p>
                 </div>
-                <div class="imagenss">
-                    <img style="padding-bottom: 30px;" src="./img/note.jpg" width="400" height="300" alt="foto empresa"/>
-                </div>
+            </div>
+            <div class="imagenss">
+                <img style="margin-top: 95px;" src="./img/note.jpg" width="400" height="300" alt="foto empresa"/>
             </div>
         </div>
 
@@ -128,11 +128,11 @@
         <!-- Fim lista de vendas parte 1-->
 
         <div id="relatorio">
+            <div class="imagensss">
+                <img style="margin-top: 95px;" src="./img/transparency.jpg" width="400" height="300" alt="foto empresa e clientes"/>
+            </div>
             <div id="relatorioTextos" class="blocos" >
                 <div class="text" id="relatorioTextoss">
-                    <div class="imagensss">
-                        <img style="padding-top: 12px;" src="./img/transparency.jpg" width="400" height="300" alt="foto empresa e clientes"/>
-                    </div>
                     <div>
                         <h2 class="fon" style="font-size: 45px; font-weight: bold;">Transparência</h2>
                         <p class="um">Na nossa abordagem, a transparência com os nossos clientes é fundamental. Acreditamos que a confiança é
